--- a/ISSK_ETH_V1_1.ioc
+++ b/ISSK_ETH_V1_1.ioc
@@ -103,23 +103,31 @@ OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
-PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=USART2_REn
+PA0-WKUP.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PA0-WKUP.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA0-WKUP.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA0-WKUP.Locked=true
+PA0-WKUP.PinState=GPIO_PIN_RESET
 PA0-WKUP.Signal=GPIO_Output
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=USART2_DE
+PA1.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PA1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA1.Locked=true
+PA1.PinState=GPIO_PIN_RESET
 PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=USART1_REn
+PA11.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PA11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA11.Locked=true
+PA11.PinState=GPIO_PIN_RESET
 PA11.Signal=GPIO_Output
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=USART1_DE
+PA12.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PA12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA12.Locked=true
+PA12.PinState=GPIO_PIN_RESET
 PA12.Signal=GPIO_Output
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
@@ -129,9 +137,11 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=SPI1_CS
+PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PA4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA4.Locked=true
+PA4.PinState=GPIO_PIN_RESET
 PA4.Signal=GPIO_Output
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
@@ -139,27 +149,34 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=DEB_LED0
+PA8.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PA8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA8.Locked=true
+PA8.PinState=GPIO_PIN_RESET
 PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=W5500_RST
+PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB0.Locked=true
+PB0.PinState=GPIO_PIN_RESET
 PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=W5500_INTn
+PB1.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PB1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PB1.GPIO_PuPd=GPIO_NOPULL
 PB1.Locked=true
 PB1.Signal=GPXTI1
 PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PB12.GPIOParameters=GPIO_Label
-PB12.GPIO_Label=W5500_CS
+PB12.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB12.Locked=true
+PB12.PinState=GPIO_PIN_RESET
 PB12.Signal=GPIO_Output
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -169,37 +186,51 @@ PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=Z6
+PB4.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PB4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB4.Locked=true
+PB4.PinState=GPIO_PIN_RESET
 PB4.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=EX_MEMORY_CS
+PB9.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB9.Locked=true
+PB9.PinState=GPIO_PIN_RESET
 PB9.Signal=GPIO_Output
-PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=Z11
+PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PC0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC0.Locked=true
+PC0.PinState=GPIO_PIN_RESET
 PC0.Signal=GPIO_Output
-PC11.GPIOParameters=GPIO_Label
-PC11.GPIO_Label=DEB_LED2
+PC11.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PC11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC11.Locked=true
+PC11.PinState=GPIO_PIN_RESET
 PC11.Signal=GPIO_Output
-PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=DEB_LED1
+PC12.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PC12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC12.Locked=true
+PC12.PinState=GPIO_PIN_RESET
 PC12.Signal=GPIO_Output
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=Z10
+PC2.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PC2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC2.Locked=true
+PC2.PinState=GPIO_PIN_RESET
 PC2.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=Z9
+PC7.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PC7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Locked=true
+PC7.PinState=GPIO_PIN_RESET
 PC7.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
@@ -209,13 +240,17 @@ PCC.Seq0=0
 PCC.Series=STM32F1
 PCC.Temperature=25
 PCC.Vdd=3.3
-PD0.GPIOParameters=GPIO_Label
-PD0.GPIO_Label=Z7
+PD0.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PD0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PD0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD0.Locked=true
+PD0.PinState=GPIO_PIN_RESET
 PD0.Signal=GPIO_Output
-PD4.GPIOParameters=GPIO_Label
-PD4.GPIO_Label=JEST_uSDn
+PD4.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PD4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD4.Locked=true
+PD4.PinState=GPIO_PIN_RESET
 PD4.Signal=GPIO_Output
 PD8.Locked=true
 PD8.Mode=Asynchronous
@@ -223,16 +258,21 @@ PD8.Signal=USART3_TX
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PE0.GPIOParameters=GPIO_Label
-PE0.GPIO_Label=Z5
+PE0.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PE0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE0.Locked=true
+PE0.PinState=GPIO_PIN_RESET
 PE0.Signal=GPIO_Output
-PE15.GPIOParameters=GPIO_Label
-PE15.GPIO_Label=Z2
+PE15.GPIOParameters=GPIO_Speed,PinState,GPIO_ModeDefaultOutputPP
+PE15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE15.Locked=true
+PE15.PinState=GPIO_PIN_RESET
 PE15.Signal=GPIO_Output
-PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=INT_in
+PE6.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PE6.GPIO_Mode=GPIO_MODE_INPUT
+PE6.GPIO_PuPd=GPIO_NOPULL
 PE6.Locked=true
 PE6.Signal=GPIO_Input
 ProjectManager.AskForMigrate=true
